--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ecom-front-angular": {
+    "ecom-diallo": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ecom-front-angular",
+            "outputPath": "dist/ecom-diallo",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,14 +24,13 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
-
             ]
           },
           "configurations": {
@@ -69,18 +68,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ecom-front-angular:build"
+            "browserTarget": "ecom-diallo:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ecom-front-angular:build:production"
+              "browserTarget": "ecom-diallo:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ecom-front-angular:build"
+            "browserTarget": "ecom-diallo:build"
           }
         },
         "test": {
@@ -117,15 +116,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ecom-front-angular:serve"
+            "devServerTarget": "ecom-diallo:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ecom-front-angular:serve:production"
+              "devServerTarget": "ecom-diallo:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "ecom-front-angular"
+  "defaultProject": "ecom-diallo"
 }
